PL-1441 Add tests for User groups 4 and 5 and pensjonpoeng